dropdown gap, cooking time fix

--- a/Mat.Frontend/src/styles/styles.module.css
+++ b/Mat.Frontend/src/styles/styles.module.css
@@ -249,7 +249,7 @@
     position: absolute;
     background-color: var(--light-grey);
     right: 0;
-    margin: 0 1rem 1rem 1rem;
+    margin: 1rem;
     display: flex;
     flex-direction: column;
     border-radius: var(--border-radius);
